[package]
name         = "ibc-proto"
version      = "0.52.1"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
license      = "Apache-2.0"
repository   = "https://github.com/cosmos/ibc-proto-rs"
readme       = "README.md"
categories   = ["cryptography::cryptocurrencies", "encoding", "no-std"]
keywords     = ["blockchain", "cosmos", "tendermint", "ibc", "proto"]
exclude      = ["definitions", "tools", ".changelog", ".github"]
description  = """
    ibc-proto provides Cosmos SDK & IBC Protocol Buffers definitions
"""
rust-version = "1.88.0"

[workspace]
members = [
    ".",
    "tools/proto-compiler"
]

[lib]
name    = "ibc_proto"
path    = "src/lib.rs"
doctest = false

[package.metadata.docs.rs]
all-features = true

[dependencies]
prost                  = { version = "0.14.1", default-features = false}
prost-derive           = { version ="0.14.1" }
bytes                  = { version = "1.2",  default-features = false }
tonic                  = { version = "0.14.1",  default-features = false, optional = true }
tonic-prost            = {version = "0.14.1" }
serde                  = { version = "1.0",  default-features = false, optional = true }
schemars               = { version = "0.8", optional = true }
subtle-encoding        = { version = "0.5",  default-features = false }
base64                 = { version = "0.22", default-features = false, features = ["alloc"] }
flex-error             = { version = "0.4",  default-features = false }
ics23                  = { version = "0.12.1", default-features = false, git="https://github.com/PFC-developer/ics23.git", branch = "prost-14.1"}
informalsystems-pbjson = { version = "0.7.0", optional = true, default-features = false }

[dependencies.tendermint-proto]
version          = "0.40.5"
default-features = false
path = "../tendermint-rs/proto"

[dependencies.cosmos-sdk-proto]
version = "0.27.1"
default-features = false
path = "../cosmos-rust/cosmos-sdk-proto"

[dev-dependencies]
serde_json = "1.0.107"

[features]
default            = ["std", "client", "transport"]
transport          = ["tonic/transport", "cosmos-sdk-proto/grpc-transport"]
std                = ["cosmos-sdk-proto/std", "prost/std", "bytes/std", "subtle-encoding/std", "base64/std", "flex-error/std", "ics23/std", "informalsystems-pbjson/std"]
serde              = ["dep:serde", "dep:informalsystems-pbjson", "ics23/serde", "cosmos-sdk-proto/serde"]
client             = ["std", "dep:tonic", "tonic/codegen", ]
json-schema        = ["std", "serde", "tendermint-proto/json-schema", "dep:schemars"]
server             = ["std", "dep:tonic", "tonic/codegen"]
parity-scale-codec = ["tendermint-proto/parity-scale-codec"]
borsh              = ["tendermint-proto/borsh"]
proto-descriptor   = []
